picking interesting analysis in combined egg counting data for data analysis.

--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -43,6 +43,14 @@ not using day and experiment in the model
  1:2H - 1:2S   -1.050 0.11 1193  -9.554  <.0001
  
  is the most interesting result 
+ 
+ 
+ interesting egg results 
+ 
+ if using combined egg data 
 
-
+1:8H - 1:8S    -42.8 6.88 75  -6.217  <.0001
+ 1:2S - 1:8S    -79.2 6.88 75 -11.511  <.0001
+ 
+ much prefer to lay their eggs on a soft diet
 
