--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -20,10 +20,12 @@ The preview shows you a rendered HTML copy of the contents of the editor. Conseq
 
 ```{r}
 performance::check_model(exp1alllm)
+summary(exp1alllm)
 ```
 
 ```{r}
 performance::check_model(exp2bothlm)
+summary(exp2bothlm)
 ```
 
 probably analyse 1:2 hard and soft for feeding behaviour 
