Adding information to the data analysis notebook

--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -105,6 +105,6 @@ oviposition
 they really like to lay their eggs on 1:8 soft (which was expected), then 8:1 soft, 1:8 hard soon after, but 8:1 hard is not really liked at all 
 
 
-two factor test
+two factor test!!
 
 
