--- a/data analysis practise/Data Analysis Notebook.Rmd
+++ b/data analysis practise/Data Analysis Notebook.Rmd
@@ -16,6 +16,17 @@ When you save the notebook, an HTML file containing the code and output will be 
 The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
 
 
+
+1:8 and 8:1 experiment!! 
+
+
+
+
+
+
+
+
+
 ```{r}
 performance::check_model(exp1alllm)
 summary(exp1alllm)
